--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
- 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   <title>Testimonials</title>
 </head>
 <body>
-<!-- <main> instead of <testimonials> -->
-  <testimonials>
+  <header></header>
+<!-- testimonials -->
+  <testimonials class="grid-container">
 <!-- daniel card -->
-    <article class="card card-1">
+    <div class="card card-1">
       <div class="card_head">
         <img src="./images/image-daniel.jpg" alt="">
         <div class=""card_user">
@@ -31,10 +31,10 @@
   The next 12 weeks was the best - and most grueling - time of my life. Since completing 
   the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
       </p>
-    </article> 
+    </div> 
 
 <!-- Jonathan card -->
-    <article class="card card-2">
+    <div class="card card-2">
       <div class="card_head">
         <img src="./images/image-jonathan.jpg" alt="">
         <div class=""card_user">
@@ -49,10 +49,10 @@
         “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
         for a big company. This was one of the best investments I’ve made in myself. ”
       </p>
-    </article> 
+    </div> 
 
 <!-- jeanette card -->
-    <article class="card card-3">
+    <div class="card card-3">
       <div class="card_head">
         <img src="./images/image-jeanette.jpg" alt="">
         <div class=""card_user">
@@ -67,10 +67,10 @@
         “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
         while doing something I love. ”
       </p>
-    </article> 
+    </div> 
 
 <!-- Patrick card -->
-    <article class="card card-4">
+    <div class="card card-4">
       <div class="card_head">
         <img src="./images/image-patrick.jpg" alt="">
         <div class=""card_user">
@@ -88,10 +88,10 @@
         junior developer. The standard is above the rest. You will get the personal attention you need from 
         an incredible community of smart and amazing people. ”
       </p>
-    </article> 
+    </div> 
 
     <!-- Kira card -->
-    <article class="card card-5">
+    <div class="card card-5">
       <div class="card_head">
         <img src="./images/image-kira.jpg" alt="">
         <div class=""card_user">
@@ -112,7 +112,7 @@
         experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
         100% recommend! ”
       </p>
-    </article> 
+    </div> 
 
   </testimonials>
  
